breadcrumb navigation and internal links
added internal links and about page, related content, about, features etc. helped improve AEO/SEO/GEO

--- a/index.html
+++ b/index.html
@@ -171,17 +171,17 @@
     <meta name="geo.placename" content="United States">
     <meta name="ICBM" content="39.8283, -98.5795">
 
-    <!-- JSON-LD Structured Data - Enhanced -->
+    <!-- JSON-LD Structured Data - Enhanced for AEO -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "SoftwareApplication",
         "name": "iSchedulEDU",
-        "alternateName": ["iSchedule EDU", "iSchedule", "Schedule EDU"],
+        "alternateName": ["iSchedule EDU", "iSchedule", "Schedule EDU", "Teacher Schedule App", "School Schedule Generator"],
         "applicationCategory": "EducationalApplication",
         "applicationSubCategory": "SchedulingApplication",
         "operatingSystem": ["iOS", "iPadOS"],
-        "description": "Create custom school schedules in under 2 minutes with iSchedulEDU. Handle A/B rotations, early dismissals, delays, and emergency schedule changes instantly. Trusted by teachers worldwide. Free to start - download now!",
+        "description": "iSchedulEDU is a comprehensive school schedule generator app designed specifically for teachers and educators. Create custom schedules, handle emergency schedule changes, manage A/B rotations, and generate equal-time lesson plans in under 2 minutes. Perfect for fire drills, assemblies, weather delays, early dismissals, and substitute teacher scenarios. Features include intelligent equal time division, Universal Link sharing, QR code support, PDF export, and AlarmKit integration for iOS 26+.",
         "url": "https://ischeduledu.app",
         "screenshot": "https://ischeduledu.app/lovable-uploads/6bccc818-bd50-4f4a-ad6e-ebf8c4736a68.png",
         "offers": {
@@ -202,6 +202,9 @@
           "name": "iSchedulEDU",
           "url": "https://ischeduledu.app",
           "logo": "https://ischeduledu.app/lovable-uploads/6bccc818-bd50-4f4a-ad6e-ebf8c4736a68.png",
+          "description": "Educational technology company focused on creating intelligent scheduling solutions for teachers and school administrators. Specializing in emergency schedule management, equal time division algorithms, and seamless schedule sharing across educational environments.",
+          "foundingDate": "2024",
+          "industry": "Educational Technology",
           "sameAs": [
             "https://twitter.com/ischeduledu",
             "https://www.facebook.com/ischeduledu",
@@ -210,7 +213,7 @@
         },
         "audience": {
           "@type": "Audience",
-          "audienceType": ["Teachers", "Educators", "School Administrators", "Education Professionals"]
+          "audienceType": ["Teachers", "Educators", "School Administrators", "Education Professionals", "Elementary Teachers", "Middle School Teachers", "Substitute Teachers", "School Principals", "Curriculum Coordinators"]
         },
         "downloadUrl": "https://apps.apple.com/us/app/ischeduledu/id6504114850",
         "installUrl": "https://apps.apple.com/us/app/ischeduledu/id6504114850",
@@ -218,58 +221,103 @@
           "Custom schedule creation",
           "A/B rotation management", 
           "Abbreviated schedule support",
+          "Emergency schedule generation",
+          "Equal time division algorithms",
           "Daily notifications",
           "QR code sharing",
+          "Universal Link sharing",
           "Visual timeline view",
           "Bell schedule management",
-          "Period schedule tracking"
+          "Period schedule tracking",
+          "PDF export functionality",
+          "AlarmKit integration",
+          "Fire drill schedule management",
+          "Assembly interruption handling",
+          "Weather delay scheduling",
+          "Early dismissal planning",
+          "Substitute teacher handoff",
+          "Professional schedule documentation"
         ],
-        "requirements": "Requires iOS 14.0 or later, iPadOS 14.0 or later",
+        "requirements": "Requires iOS 17.6 or later, iPadOS 17.6 or later",
         "softwareVersion": "1.0.0",
         "datePublished": "2024-06-12",
         "dateModified": "2024-06-14",
         "inLanguage": "en-US",
-        "keywords": "school schedule, education app, teacher tools, A/B rotation, custom schedule, bell schedule"
+        "keywords": "school schedule, education app, teacher tools, A/B rotation, custom schedule, bell schedule, emergency schedule, fire drill schedule, assembly schedule, weather delay schedule, early dismissal schedule, substitute teacher schedule, equal time division, teacher scheduling app, classroom management, educational technology, iOS education app, iPadOS education app, teacher productivity, school administration, curriculum planning, lesson planning, classroom scheduling, academic scheduling, educational software, teacher resources, school management, educational apps, teacher organization, classroom organization, school planning, educational planning"
       }
     </script>
 
-    <!-- FAQ Structured Data - Enhanced -->
+    <!-- FAQ Structured Data - Enhanced for AEO -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "FAQPage",
-        "mainEntity": [{
-          "@type": "Question",
-          "name": "What is iSchedulEDU?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "iSchedulEDU is a school schedule generator app that helps teachers and administrators create custom and abbreviated schedules, manage A/B rotations, set up notifications, and share schedules via QR codes. It's designed specifically for iOS and iPadOS devices."
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What is iSchedulEDU and how does it help teachers?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "iSchedulEDU is a comprehensive school schedule generator app designed specifically for teachers and educators. It helps teachers create custom schedules, handle emergency schedule changes, manage A/B rotations, and generate equal-time lesson plans in under 2 minutes. The app is perfect for fire drills, assemblies, weather delays, early dismissals, and substitute teacher scenarios."
+            }
+          },
+          {
+            "@type": "Question", 
+            "name": "What are the key features of iSchedulEDU for classroom management?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "iSchedulEDU offers intelligent equal time division algorithms, Universal Link sharing for seamless schedule distribution, QR code support for instant imports, PDF export for professional documentation, AlarmKit integration for iOS 26+, fire drill schedule management, assembly interruption handling, weather delay scheduling, early dismissal planning, and substitute teacher handoff capabilities."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How does iSchedulEDU handle emergency schedule changes?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "iSchedulEDU excels at emergency schedule management. When a fire drill, assembly, or weather delay disrupts your schedule, simply input your new start time and the app automatically redistributes remaining time into equal class periods. Most teachers create emergency schedules in under 2 minutes with no manual calculations required."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What devices and operating systems support iSchedulEDU?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "iSchedulEDU is compatible with iOS and iPadOS devices, requiring iOS 17.6 or later and iPadOS 17.6 or later. The app is optimized for iPhone and iPad, providing a seamless experience across all Apple mobile devices used in educational environments."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How does iSchedulEDU's equal time division algorithm work?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "iSchedulEDU uses intelligent equal time division algorithms that make most periods equal and adjust only the last period to handle odd minutes. For example, if you have 307 minutes to divide into 5 periods, the app creates 4 periods of 61 minutes each and 1 period of 63 minutes, ensuring maximum fairness while accounting for mathematical realities."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What sharing options does iSchedulEDU provide for teachers?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "iSchedulEDU supports multiple sharing methods: Universal Links work for both app users and non-app users (app users get direct import, others see web versions), QR codes for app users only, text messages with schedule details, and PDF export for professional documentation and classroom posting."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How does iSchedulEDU help with substitute teacher scenarios?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "iSchedulEDU is perfect for substitute teacher handoffs. Universal Links automatically import schedules for substitute teachers who have the app, or show web versions for those who don't. This ensures smooth transitions regardless of the substitute's technical setup and provides professional documentation."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What makes iSchedulEDU different from other teacher scheduling apps?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "iSchedulEDU is specifically designed for educational environments with intelligent equal time division, comprehensive emergency schedule management, seamless sharing across different user types, and deep integration with modern iOS features like AlarmKit. The app understands the unique challenges of elementary and middle school education."
+            }
           }
-        },
-        {
-          "@type": "Question", 
-          "name": "What features does iSchedulEDU offer?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "iSchedulEDU offers custom schedule creation, A/B rotation management, abbreviated schedule support, daily notifications, visual timeline views, bell schedule management, and easy schedule sharing through QR codes or text messages."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "Is iSchedulEDU free to use?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Yes, iSchedulEDU offers 4 free schedule generation sessions to get you started. Additional premium features are available through in-app purchases."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "What devices support iSchedulEDU?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "iSchedulEDU is compatible with iOS and iPadOS devices, requiring iOS 14.0 or later and iPadOS 14.0 or later."
-          }
-        }]
+        ]
       }
     </script>
 
